fix input label svg icon alignment

--- a/components/src/core/components/InputField/input-group.scss
+++ b/components/src/core/components/InputField/input-group.scss
@@ -38,5 +38,7 @@
 .oxd-input-group__label-icon {
   width: $oxd-input-group-label-icon-size;
   height: $oxd-input-group-label-icon-size;
+}
+.oxd-input-group__label-icon.oxd-svg-icon {
   align-self: end;
 }
